fixing the bug with center aligned video width

--- a/docroot/themes/custom/ucsf/scss/components/_align-media.scss
+++ b/docroot/themes/custom/ucsf/scss/components/_align-media.scss
@@ -218,3 +218,8 @@ $align-directions: left, right;
     caption-side: bottom;
   }
 }
+
+// Fixing the bug with center aligned videos not having any width
+.align-center--video {
+  width: 100%;
+}
